--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "contact-list",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.js", 
+  "homepage": "http://KaylanThompson.github.io/Strangers-Things-2.0",
   "scripts": {
     "start:dev": "NODE_ENV='development' react-scripts start",
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -28,5 +30,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
+
+ 
+
 }
