--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:dev": "NODE_ENV='development' react-scripts start",
     "start": "react-scripts start",
     "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "deploy" : "gh-pages -d build",
+    "build": "react-scripts build"
   },
   "keywords": [],
   "author": "",
